@@ -50,6 +50,7 @@ Application Changes:
 - Improvements and other types of bonuses that disable cyberware and/or bioware no longer prevent characters from buying Essence Holes, Essence Antiholes, unequipped modular cyberlimbs, and plugins for unequipped modular cyberlimbs.
 - When adding bonuses or improvements that disable cyberware and/or bioware, characters no longer get their Essence Holes, Antiholes, and modular cyberlimbs deleted.
 - Armor costs now properly support "FixedValues()" entries.
+- Cybersuites that add cyberlimbs now properly incorporate those cyberlimbs' attributes into the character's overall attributes.
 
 Data Changes:
 - Fixed missing multiplier for Haunted lifestyle quality.
